// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`talon/app renders no theme layout 1`] = `
<talon-app>
  #shadow-root(open)
</talon-app>
`;

exports[`talon/app renders the theme layout 1`] = `
<talon-app>
  #shadow-root(open)
    <h1>
      Theme Layout: 
    </h1>
    <p>
      What kind of stuff? 
      Hello
       
    </p>
</talon-app>
`;

exports[`talon/app renders the theme layout with empty route params 1`] = `
<talon-app>
  #shadow-root(open)
    <h1>
      Theme Layout: 
    </h1>
    <p>
      What kind of stuff? 
      Hello
       
    </p>
</talon-app>
`;

exports[`talon/app renders the theme layout with route params 1`] = `
<talon-app>
  #shadow-root(open)
    <h1>
      Theme Layout: 
      ABC123
    </h1>
    <p>
      What kind of stuff? 
      Hello
       
    </p>
</talon-app>
`;

exports[`talon/app route params are updated even if the theme layout hasnt changed 1`] = `
<talon-app>
  #shadow-root(open)
    <h1>
      Theme Layout: 
      FOOBAR
    </h1>
    <p>
      What kind of stuff? 
      Hello
       
    </p>
</talon-app>
`;

exports[`talon/app sets the right route params when theme layout changes 1`] = `
<talon-app>
  #shadow-root(open)
    <h1>
      Theme Layout: 
      FOOBAR
    </h1>
    <p>
      What kind of stuff? 
      Hello
       
    </p>
</talon-app>
`;
